@@ -1,3 +1,9 @@
+2017-03-31  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/init.R (.onLoad): The 'isRStudio' test has been refined to allow
+	RStudio versions 1.1.129 or later which no longer conflict with Boost
+	* R/anytime.R (testFormat, testOutput): Message reworded
+
 2017-03-21  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Release 0.2.2
